force-app/main/default/objects/VehicleMaster__c/VehicleMaster__c.object-meta.xml
<CustomObject>
    <label>車両マスタ</label>
    <nameField>
        <label>車番</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>