force-app/main/default/objects/VehicleMaster__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>輸送管理区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AmbientTemperature</fullName>
                <label>ドライ</label>
            </value>
            <value>
                <fullName>Refrigerated</fullName>
                <default>true</default>
                <label>冷蔵</label>
            </value>
            <value>
                <fullName>Frozen</fullName>
                <label>冷凍</label>
            </value>
            <value>
                <fullName>Unspecified</fullName>
                <label>指定なし</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>