force-app/main/default/objects/VehicleMaster__c/fields/CompulsoryInsuranceExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>CompulsoryInsuranceExpirationDate__c</fullName>
    <label>自賠責保険満了日</label>
    <type>Date</type>
</CustomField>