force-app/main/default/objects/VehicleMaster__c/fields/CurbWeight__c.field-meta.xml
<CustomField>
    <fullName>CurbWeight__c</fullName>
    <inlineHelpText>単位：kg</inlineHelpText>
    <label>車両重量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>