force-app/main/default/objects/VehicleMaster__c/fields/DriverName__c.field-meta.xml
<CustomField>
    <fullName>DriverName__c</fullName>
    <label>担当</label>
    <length>255</length>
    <type>Text</type>
</CustomField>