force-app/main/default/objects/VehicleMaster__c/fields/FirstRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>FirstRegistrationDate__c</fullName>
    <label>初度登録年月</label>
    <type>Date</type>
</CustomField>