force-app/main/default/objects/VehicleMaster__c/fields/FuelEfficiency__c.field-meta.xml
<CustomField>
    <fullName>FuelEfficiency__c</fullName>
    <inlineHelpText>km/L</inlineHelpText>
    <label>燃費</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>