force-app/main/default/objects/VehicleMaster__c/fields/GrossVehicleWeight__c.field-meta.xml
<CustomField>
    <fullName>GrossVehicleWeight__c</fullName>
    <inlineHelpText>単位：kg</inlineHelpText>
    <label>車両総重量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>