force-app/main/default/objects/VehicleMaster__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <inlineHelpText>単位：cm</inlineHelpText>
    <label>高さ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>