force-app/main/default/objects/VehicleMaster__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <inlineHelpText>単位：cm</inlineHelpText>
    <label>長さ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>