force-app/main/default/objects/VehicleMaster__c/fields/MaximumLoadCapacity__c.field-meta.xml
<CustomField>
    <fullName>MaximumLoadCapacity__c</fullName>
    <inlineHelpText>単位：kg</inlineHelpText>
    <label>最大積載量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>