force-app/main/default/objects/VehicleMaster__c/fields/OwnerAccount__c.field-meta.xml
<CustomField>
    <fullName>OwnerAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>所有権</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>その他</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>車両マスタ</relationshipLabel>
    <relationshipName>VehicleMasterList</relationshipName>
    <type>Lookup</type>
</CustomField>