force-app/main/default/objects/VehicleMaster__c/fields/TruckConfiguration__c.field-meta.xml
<CustomField>
    <fullName>TruckConfiguration__c</fullName>
    <label>車型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FrozenWing</fullName>
                <label>冷凍ウイング</label>
            </value>
            <value>
                <fullName>LowFloorWing</fullName>
                <default>true</default>
                <label>ウイング（低床）</label>
            </value>
            <value>
                <fullName>HighFloorWing</fullName>
                <label>ウイング（高床）</label>
            </value>
            <value>
                <fullName>Box</fullName>
                <label>箱車</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>