force-app/main/default/objects/VehicleMaster__c/fields/VehicleIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>VehicleIdentificationNumber__c</fullName>
    <label>車台番号</label>
    <length>17</length>
    <type>Text</type>
</CustomField>