force-app/main/default/objects/VehicleMaster__c/fields/VehicleInspectionExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>VehicleInspectionExpirationDate__c</fullName>
    <label>車検満了日</label>
    <type>Date</type>
</CustomField>