force-app/main/default/objects/VehicleMaster__c/fields/VehicleModel__c.field-meta.xml
<CustomField>
    <fullName>VehicleModel__c</fullName>
    <label>型式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>