force-app/main/default/objects/VehicleMaster__c/fields/VehicleName__c.field-meta.xml
<CustomField>
    <fullName>VehicleName__c</fullName>
    <label>車名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>