force-app/main/default/objects/VehicleMaster__c/fields/VehicleRegistrationDetails__c.field-meta.xml
<CustomField>
    <fullName>VehicleRegistrationDetails__c</fullName>
    <inlineHelpText>ナンバープレートの「地名・分類番号・ひらがな」を入力する項目です。</inlineHelpText>
    <label>車番１</label>
    <length>50</length>
    <type>Text</type>
</CustomField>