force-app/main/default/objects/VehicleMaster__c/fields/VehicleSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>VehicleSerialNumber__c</fullName>
    <inlineHelpText>ナンバープレートの「一連指定番号」を入力する項目です。</inlineHelpText>
    <label>車番２</label>
    <length>4</length>
    <type>Text</type>
</CustomField>