force-app/main/default/objects/VehicleMaster__c/fields/VehicleType__c.field-meta.xml
<CustomField>
    <fullName>VehicleType__c</fullName>
    <label>車種</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VehicleType</valueSetName>
    </valueSet>
</CustomField>