force-app/main/default/objects/VehicleMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VehicleRegistrationDetails__c</columns>
    <columns>VehicleSerialNumber__c</columns>
    <columns>Category__c</columns>
    <columns>MaximumLoadCapacity__c</columns>
    <columns>OwnerAccount__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>